2003-09-07  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixed bug of the getpapersize() function
	  returning the size of "Letter" when requesting the sixe of
	  "Half Letter".

2003-08-27  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: When using "foomatic-configure -P -r"
	  recognize implicit classes as remotely defined printer (for
	  now this works only for root).

2003-08-26  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Let the information about the default
	  printer be included in the output of "foomatic-configure -P".
	  This makes the initial reading of configuration information by a
	  frontend much faster. The information will by in
	  $QUEUES[x]->{'queuedata'}{'default'}, which is 1 for the default
	  queue and 0 for the other queues. Added support for the "-r"
	  option with "foomatic-configure -P"
	  ($QUEUES[x]->{'queuedata'}{'remote'} field indicates remote
	  queues). Retrieve the "Location" information of remotely defined
	  CUPS printers.

2003-08-24  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixed reading make and model name of the
	  printer from the PPD file to also work with the new Foomatic
	  PPDs ("*ShortNickName" linited to 32 characters and no comma
	  before the driver name).

2003-08-14  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-compiledb.in: Let PPD pre-compilation process not choke
	  on a driver entry with a non-existing printer (for example
	  mistyped) in its list.

2003-08-12  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-combo-xml.c: Pre-initialized pointers in the loadidlist()
	  function (thanks to Gwenole Beauchesne from MandrakeSoft).

2003-08-07  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: HPOJ after 0.9 needs two slashes instead
	  of one in CUPS device URIs ("ptal://..."). Let
	  foomatic-configure do the correct thing independent whether the
	  user enters a "ptal" URI with one or two slashes.
