@@ -68,13 +68,13 @@ cd ..
 
 Add support for HPIJS (optional):
 
-tar -xvzf foomatic-db-hoijs*.tar.gz
-cd foomatic-db-hoijs*
+tar -xvzf foomatic-db-hpijs*.tar.gz
+cd foomatic-db-hpijs*
 make_configure # (only if you downloaded from CVS)
 ./configure
 make inplace
 cd ../foomatic-db-engine*
-./foomatic-kitload -f -k ../foomatic-db-hoijs*/db/source/
+./foomatic-kitload -f -k ../foomatic-db-hpijs*/db/source/
 cd ..
 
 Add support for GIMP-Print (optional, <...> is the GIMP-Print source
