@@ -3,7 +3,7 @@ AC_INIT(foomatic-perl-data.c)
 
 dnl If the user didn't specify the $sysconfdir on the command line, let it
 dnl be /etc, not /usr/local/etc or /usr/etc
-if [[ x$sysconfdir == 'x${prefix}/etc' ]]; then
+if [[ x$sysconfdir = 'x${prefix}/etc' ]]; then
   sysconfdir=/etc
 fi
 
